upgrade version to 4.17.0-kylin

--- a/liquibase-core/pom.xml
+++ b/liquibase-core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase</artifactId>
-        <version>0-SNAPSHOT</version>
+        <version>4.17.0-kylin</version>
     </parent>
 
     <artifactId>liquibase-core</artifactId>
