--- a/liquibase-cli/pom.xml
+++ b/liquibase-cli/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase</artifactId>
-        <version>4.17.0-kylin</version>
+        <version>0-SNAPSHOT</version>
     </parent>
 
     <description>Liquibase CLI interface</description>
