--- a/liquibase-dist/pom.xml
+++ b/liquibase-dist/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.liquibase</groupId>
 		<artifactId>liquibase</artifactId>
-		<version>4.17.0-kylin</version>
+		<version>0-SNAPSHOT</version>
 	</parent>
 	<artifactId>liquibase-dist</artifactId>
 	<packaging>jar</packaging>
