--- a/liquibase-maven-plugin/pom.xml
+++ b/liquibase-maven-plugin/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase</artifactId>
-        <version>4.17.0-kylin</version>
+        <version>0-SNAPSHOT</version>
     </parent>
 
     <artifactId>liquibase-maven-plugin</artifactId>
