--- a/liquibase-snowflake/pom.xml
+++ b/liquibase-snowflake/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>liquibase</artifactId>
         <groupId>org.liquibase</groupId>
-        <version>4.17.0-kylin</version>
+        <version>0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
