--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.liquibase</groupId>
     <artifactId>liquibase</artifactId>
-    <version>4.17.0-kylin</version>
+    <version>0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <url>http://www.liquibase.org</url>
